assets/css/components/_navigation.scss
/**
 * Nav Elements
 * -----------------------------------------------------------------------------
 * @category   Stylesheet
 * @package    Sheepie
 * @author     Mark Grealish <mark@bhalash.com>
 * @copyright  Copyright (c) 2015 Mark Grealish
 * @license    https://www.gnu.org/copyleft/gpl.html The GNU GPL v3.0
 * @version    3.0
 * @link       https://github.com/bhalash/sheepie
 */

/**
 * Home Link
 * -----------------------------------------------------------------------------
 */

nav#gohome {
    @include margin(2, bottom);

    a {
        &:before {
            content: '← ';
        }
    }
}

/*
 * Pagination
 * -----------------------------------------------------------------------------
 * There is pagination for both individual posts and for the site itself.
 */

nav#pagination {
    @include margin(3 0);
    @include columns(flex, p, 3, 0);

    span {
        color: palette(black);
        white-space: nowrap;
    }

    p.count {
        text-align: center;

        @include media(smartphone) {
            display: none;
        }

        &:empty {
            display: none;
        }
    }

    p[class^=next] {
        text-align: right;  
    }

    p.previous-post, p.next-post {
        @include media(smartphone) {
            white-space: normal;
        }
    }
}

.nav-box-shadow {
    box-shadow: 0px -5px 39px -17px rgba(0,0,0,0.95);
}

